<?xml version="1.0" encoding="utf-8"?>
<!--Programmer(s): Charles Lett Jr.-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Possibly change this based on story progression or collectibles-->
    <ImageView
        android:id="@+id/main_BG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fantasy_bg"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="0dp"
        />

    <!--May call this and 'setting_BTN' to open settings menu-->
    <ImageView
        android:id="@+id/settings_BTN_BG"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:scaleType="fitXY"
        android:src="@drawable/scroll_bg_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageButton
        android:id="@+id/settings_BTN"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/settings_icon"
        app:layout_constraintBottom_toBottomOf="@+id/settings_BTN_BG"
        app:layout_constraintEnd_toEndOf="@+id/settings_BTN_BG"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/settings_BTN_BG"
        app:layout_constraintTop_toTopOf="@+id/settings_BTN_BG"
        app:layout_constraintVertical_bias="0.55" />

    <ImageView
        android:id="@+id/title_BG"
        android:layout_width="440dp"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:src="@drawable/scroll_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_BG"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_name"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.160" />

    <TextView
        android:id="@+id/act_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/story_act"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/title_BG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_TV"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/continue_game_BTN"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/scroll_bg"
        android:text="@string/continue_game_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_TV" />

    <Button
        android:id="@+id/new_game_BTN"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/scroll_bg"
        android:text="@string/new_game_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_game_BTN" />

    <Button
        android:id="@+id/collectible_BTN"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/scroll_bg"
        android:text="@string/collectable_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_BTN" />

    <Button
        android:id="@+id/credits_BTN"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:text="@string/credits_btn"
        android:background="@drawable/scroll_bg"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectible_BTN" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>